# end_to_end-CNN-RayBNN

./: .gitignore  Dockerfile  README.md  init1.sh  newDockerfile  requirements.txt  testX.csv  testY.csv  testcompile.sh  trainX.csv  trainY.csv
raybnn/: .gitattributes  .gitignore  Cargo.toml  README.md  Script_for_running_on_compute_Canada.sh  install.sh  output.txt  output_with_forward.txt  plot_results_matlab.sh  run_results_fig4_other_models.sh  run_results_rust.sh
raybnn/examples/: figure1b.rs  figure2a.rs  figure2b.rs  figure2c.rs  figure2d.rs  figure2e.rs  figure2f.rs  figure3a.rs  figure3b.rs  figure3d.rs  figure4_raybnn.rs  figure4_raybnn_optim.rs  figure5_raybnn2.rs  figure6_raybnn2.rs  table1_deep4net_raybnn.rs  table1_raybnn_optim.rs  table1_transfer_xdawn_deep4net_raybnn.rs  toy_example.rs
raybnn/matlab_plot/: CSRtoCOO.m  Prob_length.m  UAF.m  figure1b_plot.m  figure2a_plot.m  figure2b_plot.m  figure2c_plot.m  figure2d_plot.m  figure2e_plot.m  figure2f_plot.m  figure3a_plot.m  figure3b_plot.m  figure3c_plot.m  figure3d_plot.m  figure3e_plot.m  figure3f_plot.m  figure4a_plot.m  figure4b_plot.m  figure4c_plot.m  figure4d_plot.m  figure4e_plot.m  figure4f_plot.m  plotTree.m  readNetworkFile.m
raybnn/python_verify/: changeprecision.py  convertf16.py
raybnn/python_verify/EEG/: plot_EEG_MI.m
raybnn/python_verify/RSSI2/: All_run.py  BILSTMRSSI.py  CNNRSSI.py  GCN2RSSI.py  GNNLSTMRSSI.py  LSTMRSSI.py  MLPRSSI.py  TRANSFORMERRSSI.py  filterdata.py  generate_test.py  generate_train.py  getresult.py  getresult2.py  preprocessor.py  view_MAE.m  view_RMSE.m
raybnn/src/: lib.rs
raybnn/src/diffeq/: mod.rs  ode45_f32.rs  ode45_f64.rs  ode_net_f32.rs  ode_net_f64.rs
raybnn/src/distribute/: host_info_u64.rs  mod.rs  multi_node_f32.rs  multi_node_f64.rs
raybnn/src/export/: dataloader_f32.rs  dataloader_f64.rs  dataloader_i32.rs  dataloader_u64.rs  mod.rs  numpy_f32.rs  numpy_f64.rs  rand_f32.rs  rand_f64.rs  rand_u64.rs  round_f32.rs  round_f64.rs
raybnn/src/graph/: adjacency_f32.rs  adjacency_f64.rs  large_sparse_f32.rs  large_sparse_f64.rs  large_sparse_i32.rs  large_sparse_u64.rs  mod.rs  path_f32.rs  path_f64.rs  tree_i32.rs  tree_u32.rs  tree_u64.rs
raybnn/src/interface/: automatic_f32.rs  automatic_f64.rs  autotest_f32.rs  autotest_f64.rs  autotrain_f32.rs  autotrain_f64.rs  autotransfer_f32.rs  autotransfer_f64.rs  mod.rs
raybnn/src/interpol/: linear_c64.rs  linear_f32.rs  linear_f64.rs  mod.rs
raybnn/src/neural/: activation_f32.rs  activation_f64.rs  mod.rs  network_f32.rs  network_f64.rs  note.txt  restructure_f32.rs  test_example  weight_share_f32.rs  weight_share_f64.rs
raybnn/src/optimal/: control_f32.rs  control_f64.rs  evolution_f32.rs  evolution_f64.rs  gd_f32.rs  gd_f64.rs  loss_f32.rs  loss_f64.rs  measure_f16.rs  measure_f32.rs  measure_f64.rs  measure_u32.rs  mod.rs
raybnn/src/physics/: mod.rs  (+12 more)
(+38 files in other folders)
